--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 .App{
- 
+ font-family: 'Press Start 2P';
+ display: flex;
+ flex-direction: row;
+ align-items: center;
+ justify-content: center;
+ height: 100vh;
+width:100vw;
+}
+.App-Main{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    height: 100%;
+    width:100%;
+    backdrop-filter: blur(7px);
+
+
+}
+#Main-Title{
+    font-size: 70px;
+-webkit-text-fill-color: white;
+  -webkit-text-stroke: 3px;
+  -webkit-text-stroke-color: black;
+  letter-spacing: 1px;
+}
+#Main-Sub{
+    font-size: 25px;
+    -webkit-text-fill-color: white;
+      -webkit-text-stroke: 2px;
+      -webkit-text-stroke-color: black;
+}
+
+#Mint-Button{
+    font-family: 'Press Start 2P';
+    padding: 16px;
+    margin-top: 20px;
 }
